fix: history tab panel overflow layout

--- a/src/workbench/browser/src/app/pages/api/api.component.scss
+++ b/src/workbench/browser/src/app/pages/api/api.component.scss
@@ -1,4 +1,5 @@
 nz-content {
+  width: 100%;
   background-color: var(--MAIN_BG);
 }
 
